Fix admission and tuition link spacing on programs

--- a/web/themes/custom/citizen_dart/components/04-units/nodes/academic-program/_academic-program.scss
+++ b/web/themes/custom/citizen_dart/components/04-units/nodes/academic-program/_academic-program.scss
@@ -73,10 +73,13 @@
       font-family: $displayHeader;
     }
   }
-  .field-links a {
-    @include linkArrow(white, sm);
-    display: block;
-    margin-bottom: 16px;
+  .field-links{
+    padding-top: 0 !important;
+    a {
+      @include linkArrow(white, sm);
+      display: block;
+      margin-right: 16px;
+    }
   }
   .block-field-degree-types {
     margin-bottom: 3px;
